<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoinActivity">

    <include layout="@layout/toolbar" android:id="@+id/toolbar_appbar"/>

    <ImageView
        android:id="@+id/flag"
        android:layout_width="100dp"
        android:layout_height="100dp"

        app:layout_constraintTop_toBottomOf="@+id/toolbar_appbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/name" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/coin_name"

        app:layout_constraintTop_toTopOf="@+id/flag"
        app:layout_constraintStart_toEndOf="@+id/flag" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/price"

        app:layout_constraintTop_toTopOf="@+id/name"
        app:layout_constraintBottom_toBottomOf="@+id/flag"
        app:layout_constraintStart_toEndOf="@+id/flag"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/des"

        app:layout_constraintTop_toBottomOf="@+id/flag"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>