<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ErrorFirstActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/efa_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <!-- ToolBar widget -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/efa_toolbar"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/border"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/efa_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_title_name"
                        android:textSize="@dimen/title_size"
                        android:textColor="@color/black"
                        android:layout_marginTop="8dp"/>

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/efa_chips_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"

                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/efa_usd"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="64dp"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/usd"
                            android:textAlignment="center" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/efa_eur"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="64dp"
                            android:layout_height="wrap_content"
                            android:text="@string/eur"
                            android:textAlignment="center" />

                    </com.google.android.material.chip.ChipGroup>
                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/efa_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:contentDescription="@string/image_des"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/efa_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_text"
        android:textSize="@dimen/title3_size"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="16dp"

        app:layout_constraintTop_toBottomOf="@+id/efa_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/efa_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/error_button"
        android:textSize="@dimen/title3_size"
        android:textColor="@color/white"
        android:backgroundTint="@color/orange"
        android:gravity="center"
        android:onClick="clickOnRefresh"

        app:layout_constraintTop_toBottomOf="@+id/efa_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>