<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- ToolBar widget -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/back_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_back"
                        android:visibility="invisible"

                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        />

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/app_name"
                        android:textSize="24dp"
                        android:textColor="@color/white"

                        android:layout_toEndOf="@+id/back_button"
                        android:layout_centerVertical="true"/>

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chips_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"

                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/usd"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="64dp"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/usd"
                            android:textAlignment="center" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/eur"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="64dp"
                            android:layout_height="wrap_content"
                            android:text="@string/eur"
                            android:textAlignment="center" />

                    </com.google.android.material.chip.ChipGroup>

                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>