<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplFirstActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/sfa_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <!-- ToolBar widget -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/sfa_toolbar"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/border"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/sfa_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_title_name"
                        android:textSize="24dp"
                        android:textColor="@color/black"
                        android:layout_marginTop="8dp"/>

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/sfa_chips_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"

                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/sfa_usd"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="64dp"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/usd"
                            android:textAlignment="center" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/sfa_eur"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="64dp"
                            android:layout_height="wrap_content"
                            android:text="@string/eur"
                            android:textAlignment="center" />

                    </com.google.android.material.chip.ChipGroup>
                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/sfa_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/CircularProgress"
        android:minHeight="50dp"
        android:minWidth="50dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>